WIP podman & distrobox

--- a/tools/packages.yaml
+++ b/tools/packages.yaml
@@ -1295,6 +1295,11 @@ url: https://sourceforge.net/projects/disktype/files/disktype/
 activity: none
 ---
 kind: url
+name: distrobox
+url: https://github.com/89luca89/distrobox/releases
+activity: high
+---
+kind: url
 name: diy
 url: https://github.com/diatomic/diy/releases
 activity: none
@@ -6589,6 +6594,11 @@ kind: url
 name: pngquant
 url: https://github.com/kornelski/pngquant/tags
 activity: low
+---
+kind: url
+name: podman
+url: https://github.com/containers/podman/releases
+activity: medium
 ---
 kind: url
 name: podofo
